--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:21:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:22:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -163,7 +163,7 @@ Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) +2
 -1 thru 5</td>
       <td class="greyout leftborder">Tyrrell Hatton +17
@@ -179,7 +179,7 @@ Not started</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Talor Gooch +2
 -1 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -195,7 +195,7 @@ Not started</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
       <td class="greyout leftborder">Russell Henley +4
@@ -213,7 +213,7 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -243,7 +243,7 @@ Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -1 thru 5</td>
       <td class="greyout leftborder">Will Zalatoris +3
@@ -273,7 +273,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 -1 thru 2</td>
       <td>Robert MacIntyre +3
@@ -307,7 +307,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Dustin Johnson(W) +1
 E thru 3</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -323,7 +323,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -1 thru 5</td>
       <td class="greyout leftborder">Hideki Matsuyama +2
@@ -353,7 +353,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Viktor Hovland +2
@@ -369,7 +369,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Hideki Matsuyama +2
@@ -401,7 +401,7 @@ Missed Cut</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
       <td>Jon Rahm +4
@@ -423,7 +423,7 @@ Not started</td>
       <td>Hideki Matsuyama +2
 E thru 5</td>
       <td class="greyout leftborder">Tiger Woods +11
-+4 thru 14</td>
++4 thru 15</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -433,7 +433,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Webb Simpson +3
 +1 thru 4</td>
       <td>Will Zalatoris +3
@@ -449,7 +449,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -1 thru 5</td>
       <td>Jon Rahm +4
@@ -481,7 +481,7 @@ Missed Cut</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Talor Gooch +2
 -1 thru 6</td>
       <td>Hideki Matsuyama +2
@@ -513,7 +513,7 @@ Missed Cut</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -1 thru 5</td>
       <td>Will Zalatoris +3
@@ -545,7 +545,7 @@ Missed Cut</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
       <td>Jon Rahm +4
@@ -583,7 +583,7 @@ Not started</td>
       <td>Viktor Hovland +2
 -1 thru 5</td>
       <td class="greyout leftborder">Tiger Woods +11
-+4 thru 14</td>
++4 thru 15</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -601,7 +601,7 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris +3
 +1 thru 4</td>
       <td class="greyout">Tiger Woods(W) +11
-+4 thru 14</td>
++4 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -609,7 +609,7 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 -1 thru 2</td>
       <td>Will Zalatoris +3
@@ -623,7 +623,7 @@ Missed Cut</td>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">2</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy E
@@ -639,7 +639,7 @@ Missed Cut</td>
       <td class="bigbold">Grace</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 -1 thru 2</td>
       <td>Collin Morikawa E
@@ -673,7 +673,7 @@ Missed Cut</td>
       <td>Shane Lowry(W) -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -1 thru 5</td>
       <td>Joaquin Niemann +4
@@ -687,7 +687,7 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">6</td>
       <td>Corey Conners(W) -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 2</td>
       <td>Robert MacIntyre +3
@@ -721,11 +721,11 @@ Missed Cut</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm(W) +4
 -3 thru 14</td>
       <td>Tiger Woods +11
-+4 thru 14</td>
++4 thru 15</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
