--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:21:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:22:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -209,7 +209,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Viktor Hovland +2
@@ -243,7 +243,7 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -273,7 +273,7 @@ Missed Cut</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Dustin Johnson +1
 E thru 3</td>
       <td>Russell Henley +4
@@ -287,7 +287,7 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">6</td>
       <td>Corey Conners(W) -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 2</td>
       <td>Robert MacIntyre +3
