--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:29:25 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:30:08 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -236,6 +236,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-11</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Corey Conners -1
+E thru 1</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
+      <td>Robert MacIntyre +2
+-4 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +4
+-3 thru 16</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-11</td>
       <td>Scottie Scheffler -9
@@ -252,22 +268,6 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-10</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Corey Conners -1
-E thru 1</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Robert MacIntyre +2
--4 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +4
--3 thru 16</td>
-      <td class="greyout">Patrick Cantlay +7
--1 thru 17</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler -9
@@ -278,10 +278,26 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
-      <td class="greyout leftborder">Tony Finau +5
-+1 thru 9</td>
+      <td class="greyout leftborder">Tony Finau +6
++2 thru 10</td>
       <td class="greyout">Patrick Cantlay +7
 -1 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
+      <td>Viktor Hovland +3
+E thru 6</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 17</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -297,22 +313,6 @@ E thru 4</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 17</td>
       <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Viktor Hovland +3
-E thru 6</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 17</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -412,6 +412,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Rory McIlroy(W) -1
+-2 thru 3</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Hideki Matsuyama +3
++1 thru 6</td>
+      <td class="greyout leftborder">Tiger Woods +11
++4 thru 16</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -9
@@ -424,22 +440,6 @@ E thru 1</td>
 +1 thru 4</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
 -3 thru 16</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy(W) E
--1 thru 2</td>
-      <td>Hideki Matsuyama +3
-+1 thru 6</td>
-      <td class="greyout leftborder">Tiger Woods +11
-+4 thru 15</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -457,6 +457,22 @@ E thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay(W) +7
 -1 thru 17</td>
       <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
+      <td>Viktor Hovland +3
+E thru 6</td>
+      <td>Jon Rahm(W) +4
+-3 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -508,22 +524,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Viktor Hovland +3
-E thru 6</td>
-      <td>Jon Rahm(W) +4
--3 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -6
@@ -557,13 +557,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Corey Conners -1
 E thru 1</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -573,11 +573,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Cameron Smith -6
 Not started</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
       <td>Viktor Hovland +3
 E thru 6</td>
       <td>Jon Rahm(W) +4
@@ -589,29 +589,29 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Collin Morikawa(W) E
--1 thru 2</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Viktor Hovland +3
 E thru 6</td>
       <td class="greyout leftborder">Tiger Woods +11
-+4 thru 15</td>
++4 thru 16</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners -1
 E thru 1</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
       <td>Jon Rahm(W) +4
 -3 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -621,19 +621,35 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
       <td>Collin Morikawa E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Viktor Hovland +3
 E thru 6</td>
       <td class="greyout leftborder">Will Zalatoris +3
 +1 thru 4</td>
       <td class="greyout">Tiger Woods(W) +11
-+4 thru 15</td>
++4 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">3</td>
+      <td>Corey Conners -1
+E thru 1</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
+      <td>Collin Morikawa E
+-1 thru 3</td>
+      <td>Viktor Hovland +3
+E thru 6</td>
+      <td class="greyout leftborder">Will Zalatoris +3
++1 thru 4</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -649,22 +665,6 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">4</td>
-      <td>Corey Conners -1
-E thru 1</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Collin Morikawa E
--1 thru 2</td>
-      <td>Viktor Hovland +3
-E thru 6</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 4</td>
-      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -689,7 +689,7 @@ Missed Cut</td>
       <td>Corey Conners(W) -1
 E thru 1</td>
       <td>Collin Morikawa E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Robert MacIntyre +2
 -4 thru 14</td>
       <td>Jon Rahm +4
@@ -701,9 +701,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">8</td>
-      <td>Rory McIlroy(W) E
--1 thru 2</td>
+      <td class="bigbold">7</td>
+      <td>Rory McIlroy(W) -1
+-2 thru 3</td>
       <td>Dustin Johnson +1
 E thru 4</td>
       <td>Viktor Hovland +3
@@ -725,7 +725,7 @@ E thru 1</td>
       <td>Jon Rahm(W) +4
 -3 thru 16</td>
       <td>Tiger Woods +11
-+4 thru 15</td>
++4 thru 16</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -764,26 +764,26 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">Hasbulla</td>
       <td class="bigbold">9</td>
-      <td>Shane Lowry -2
+      <td>Rory McIlroy -1
+-2 thru 3</td>
+      <td>Justin Thomas -1
 Not started</td>
-      <td>Dustin Johnson(W) +1
-E thru 4</td>
-      <td>Tony Finau +5
-+1 thru 9</td>
-      <td>Matthew Fitzpatrick +5
-+1 thru 11</td>
-      <td class="greyout leftborder">Louis Oosthuizen
+      <td>Jon Rahm +4
+-3 thru 16</td>
+      <td>Patrick Cantlay(W) +7
+-1 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">10</td>
       <td>Collin Morikawa E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Viktor Hovland(W) +3
 E thru 6</td>
       <td>Will Zalatoris +3
@@ -796,19 +796,19 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">10</td>
-      <td>Justin Thomas -1
+      <td>Shane Lowry -2
 Not started</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Jon Rahm +4
--3 thru 16</td>
-      <td>Patrick Cantlay(W) +7
--1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
+      <td>Dustin Johnson(W) +1
+E thru 4</td>
+      <td>Matthew Fitzpatrick +5
++1 thru 11</td>
+      <td>Tony Finau +6
++2 thru 10</td>
+      <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -847,7 +847,7 @@ Missed Cut</td>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">14</td>
       <td>Collin Morikawa(W) E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Hideki Matsuyama +3
 +1 thru 6</td>
       <td>Jon Rahm +4
@@ -863,7 +863,7 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">14</td>
       <td>Collin Morikawa E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Viktor Hovland(W) +3
 E thru 6</td>
       <td>Jon Rahm +4
@@ -892,22 +892,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Collin Morikawa E
--1 thru 2</td>
-      <td>Jon Rahm(W) +4
--3 thru 16</td>
-      <td>Tony Finau +5
-+1 thru 9</td>
-      <td>Patrick Cantlay +7
--1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">17</td>
       <td>Dustin Johnson +1
@@ -921,6 +905,22 @@ E thru 6</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">17</td>
+      <td>Collin Morikawa E
+-1 thru 3</td>
+      <td>Jon Rahm(W) +4
+-3 thru 16</td>
+      <td>Tony Finau +6
++2 thru 10</td>
+      <td>Patrick Cantlay +7
+-1 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
