--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:29:25 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:30:08 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,26 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
-      <td class="greyout leftborder">Tony Finau +5
-+1 thru 9</td>
+      <td class="greyout leftborder">Tony Finau +6
++2 thru 10</td>
       <td class="greyout">Patrick Cantlay +7
 -1 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
+      <td>Tommy Fleetwood(W) +1
+E thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 6</td>
+      <td class="greyout">Joaquin Niemann +4
+E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -170,22 +186,6 @@ Not started</td>
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Tommy Fleetwood(W) +1
-E thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 6</td>
-      <td class="greyout">Joaquin Niemann +4
-E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -227,7 +227,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Collin Morikawa E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Viktor Hovland(W) +3
 E thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -253,13 +253,13 @@ E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Cameron Smith(W) -6
 Not started</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
       <td>Collin Morikawa E
--1 thru 2</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Patrick Cantlay +7
 -1 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -289,7 +289,7 @@ Missed Cut</td>
       <td>Corey Conners(W) -1
 E thru 1</td>
       <td>Collin Morikawa E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Robert MacIntyre +2
 -4 thru 14</td>
       <td>Jon Rahm +4
@@ -301,15 +301,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Collin Morikawa E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
-      <td>Tony Finau +5
-+1 thru 9</td>
+      <td>Tony Finau +6
++2 thru 10</td>
       <td class="greyout leftborder">Daniel Berger +13
 +6 thru 15</td>
       <td class="greyout">Brooks Koepka
@@ -319,7 +319,7 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">14</td>
       <td>Collin Morikawa E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Viktor Hovland(W) +3
 E thru 6</td>
       <td>Jon Rahm +4
@@ -333,13 +333,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">17</td>
       <td>Collin Morikawa E
--1 thru 2</td>
+-1 thru 3</td>
       <td>Jon Rahm(W) +4
 -3 thru 16</td>
-      <td>Tony Finau +5
-+1 thru 9</td>
+      <td>Tony Finau +6
++2 thru 10</td>
       <td>Patrick Cantlay +7
 -1 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth
