--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:30:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:30:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,6 +172,22 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Corey Conners -1
+E thru 1</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
+      <td class="greyout leftborder">Russell Henley +4
+-3 thru 14</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler -9
@@ -185,22 +201,6 @@ E thru 6</td>
       <td class="greyout leftborder">Tyrrell Hatton +17
 +8 (F)</td>
       <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Corey Conners -1
-E thru 1</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
-      <td class="greyout leftborder">Russell Henley +4
--3 thru 14</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -221,18 +221,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Cameron Smith -6
 Not started</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td>Hideki Matsuyama +3
 +1 thru 6</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-12</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+E thru 1</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 6</td>
+      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -252,32 +268,16 @@ E thru 1</td>
 -1 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-11</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-E thru 1</td>
-      <td>Viktor Hovland +3
-E thru 6</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 4</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 thru 10</td>
       <td class="greyout">Patrick Cantlay +7
@@ -317,18 +317,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +5
 +1 thru 11</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Corey Conners -1
+E thru 1</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
+      <td>Jon Rahm +4
+-3 thru 16</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -361,22 +377,6 @@ E thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 17</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Corey Conners -1
-E thru 1</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
-      <td>Jon Rahm +4
--3 thru 16</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -434,12 +434,12 @@ Missed Cut</td>
 Not started</td>
       <td>Corey Conners -1
 E thru 1</td>
-      <td>Webb Simpson +3
-+1 thru 4</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
+      <td>Will Zalatoris +2
+E thru 5</td>
+      <td>Jon Rahm(W) +4
 -3 thru 16</td>
+      <td class="greyout leftborder">Webb Simpson +4
++2 thru 5</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -508,6 +508,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+E thru 1</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
+      <td>Viktor Hovland +3
+E thru 6</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 thru 16</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler(W) -9
@@ -524,30 +540,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-E thru 1</td>
-      <td>Viktor Hovland +3
-E thru 6</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 thru 16</td>
-      <td class="greyout">Patrick Cantlay +7
--1 thru 17</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners(W) -1
 E thru 1</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td>Jon Rahm +4
 -3 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -557,19 +557,35 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Rory McIlroy -1
 -2 thru 3</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td class="greyout leftborder">Jon Rahm +4
 -3 thru 16</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">0</td>
+      <td>Rory McIlroy -1
+-2 thru 3</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 3</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 6</td>
+      <td class="greyout">Tiger Woods(W) +11
++4 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -620,46 +636,30 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">1</td>
-      <td>Rory McIlroy -1
--2 thru 3</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
-      <td>Viktor Hovland +3
-E thru 6</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 4</td>
-      <td class="greyout">Tiger Woods(W) +11
-+4 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Grace</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Rory McIlroy -1
 -2 thru 3</td>
       <td>Collin Morikawa E
 -1 thru 3</td>
-      <td>Viktor Hovland +3
+      <td>Will Zalatoris +2
+E thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +3
 E thru 6</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 4</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td>Patrick Cantlay +7
 -1 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -733,13 +733,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas(W) -1
 Not started</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td>Viktor Hovland +3
 E thru 6</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
       <td>Jon Rahm +4
 -3 thru 16</td>
       <td class="greyout leftborder">Sam Burns
@@ -749,18 +749,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas -1
 Not started</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td>Viktor Hovland +3
 E thru 6</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
       <td>Jon Rahm(W) +4
 -3 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">9</td>
+      <td>Collin Morikawa E
+-1 thru 3</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
+      <td>Viktor Hovland(W) +3
+E thru 6</td>
+      <td>Jon Rahm +4
+-3 thru 16</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 17</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -776,22 +792,6 @@ Not started</td>
 -1 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">10</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
-      <td>Viktor Hovland(W) +3
-E thru 6</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
-      <td>Jon Rahm +4
--3 thru 16</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 17</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
