--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:30:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:30:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,19 +141,35 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 thru 10</td>
       <td class="greyout">Patrick Cantlay +7
 -1 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
+      <td>Jon Rahm +4
+-3 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -172,32 +188,16 @@ E thru 6</td>
 E thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
-      <td>Jon Rahm +4
--3 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +5
 +1 thru 11</td>
       <td class="greyout">Brooks Koepka
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 3</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
+      <td>Will Zalatoris +2
+E thru 5</td>
       <td>Tony Finau +6
 +2 thru 10</td>
       <td class="greyout leftborder">Daniel Berger +13
