--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:30:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:31:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -183,7 +183,7 @@ E thru 1</td>
       <td>Will Zalatoris +2
 E thru 5</td>
       <td class="greyout leftborder">Russell Henley +4
--3 thru 14</td>
+-3 thru 15</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -598,8 +598,8 @@ Not started</td>
 E thru 6</td>
       <td>Jon Rahm(W) +4
 -3 thru 16</td>
-      <td class="greyout leftborder">Bubba Watson +7
--1 thru 16</td>
+      <td class="greyout leftborder">Bubba Watson +8
+E thru 17</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
