--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:32:17 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:33:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,8 +198,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 E thru 5</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +5
-+1 thru 11</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +4
+E thru 12</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
