--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:32:17 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:33:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -326,8 +326,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 E thru 5</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +5
-+1 thru 11</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +4
+E thru 12</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -444,6 +444,22 @@ E thru 5</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Matthew Fitzpatrick +4
+E thru 12</td>
+      <td>Patrick Cantlay +7
+-1 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -9
@@ -489,22 +505,6 @@ E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
 -3 thru 16</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Matthew Fitzpatrick +5
-+1 thru 11</td>
-      <td>Patrick Cantlay +7
--1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -797,13 +797,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">9</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Dustin Johnson(W) +1
 E thru 4</td>
-      <td>Matthew Fitzpatrick +5
-+1 thru 11</td>
+      <td>Matthew Fitzpatrick +4
+E thru 12</td>
       <td>Tony Finau +6
 +2 thru 10</td>
       <td class="greyout leftborder">Louis Oosthuizen
