--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:34:26 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:35:09 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +2
 E thru 5</td>
       <td class="greyout leftborder">Tony Finau +6
@@ -177,7 +177,7 @@ Missed Cut</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy -1
 -2 thru 3</td>
       <td>Tommy Fleetwood(W) +1
@@ -195,7 +195,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +2
 E thru 5</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +4
@@ -211,7 +211,7 @@ Not started</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +3
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -225,7 +225,7 @@ Missed Cut</td>
       <td>Sungjae Im -4
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 3</td>
       <td>Viktor Hovland(W) +3
@@ -241,7 +241,7 @@ Missed Cut</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Jon Rahm +4
@@ -271,7 +271,7 @@ Missed Cut</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">5</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Dustin Johnson +1
@@ -303,7 +303,7 @@ Missed Cut</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">7</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 3</td>
       <td>Will Zalatoris +2
