--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:34:26 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:35:09 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -211,7 +211,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -275,7 +275,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +2
 E thru 5</td>
       <td class="greyout leftborder">Tony Finau +6
@@ -289,7 +289,7 @@ E thru 5</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy -1
 -2 thru 3</td>
       <td>Viktor Hovland +3
@@ -323,7 +323,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +2
 E thru 5</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +4
@@ -371,7 +371,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +3
 E thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -387,7 +387,7 @@ Not started</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +3
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -403,7 +403,7 @@ Not started</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Hideki Matsuyama +3
 +1 thru 6</td>
       <td class="greyout leftborder">Marc Leishman +5
@@ -419,7 +419,7 @@ Not started</td>
       <td>Rory McIlroy(W) -1
 -2 thru 3</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Hideki Matsuyama +3
 +1 thru 6</td>
       <td class="greyout leftborder">Tiger Woods +11
@@ -559,7 +559,7 @@ Missed Cut</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Rory McIlroy -1
@@ -577,7 +577,7 @@ Missed Cut</td>
       <td>Rory McIlroy -1
 -2 thru 3</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 3</td>
       <td>Will Zalatoris +2
@@ -609,7 +609,7 @@ Missed Cut</td>
       <td>Rory McIlroy -1
 -2 thru 3</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa(W) E
 -1 thru 3</td>
       <td>Viktor Hovland +3
@@ -627,7 +627,7 @@ E thru 1</td>
       <td>Rory McIlroy -1
 -2 thru 3</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm(W) +4
 -3 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -657,7 +657,7 @@ Missed Cut</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +2
 E thru 5</td>
       <td>Patrick Cantlay +7
@@ -735,7 +735,7 @@ Missed Cut</td>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">8</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +2
 E thru 5</td>
       <td>Viktor Hovland +3
@@ -751,7 +751,7 @@ Missed Cut</td>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">8</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +2
 E thru 5</td>
       <td>Viktor Hovland +3
@@ -785,7 +785,7 @@ Missed Cut</td>
       <td>Rory McIlroy -1
 -2 thru 3</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +4
 -3 thru 16</td>
       <td>Patrick Cantlay(W) +7
@@ -815,7 +815,7 @@ Missed Cut</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">13</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +3
 E thru 6</td>
       <td>Jon Rahm +4
@@ -831,7 +831,7 @@ Missed Cut</td>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">13</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Hideki Matsuyama +3
 +1 thru 6</td>
       <td>Jon Rahm(W) +4
