--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:40:10 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:40:53 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -167,7 +167,7 @@ Not started</td>
       <td>Will Zalatoris +2
 E thru 6</td>
       <td class="greyout leftborder">Russell Henley +4
--3 thru 15</td>
+-3 thru 16</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -588,22 +588,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">0</td>
-      <td>Rory McIlroy -1
--2 thru 4</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 6</td>
-      <td class="greyout">Tiger Woods(W) +11
-+4 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -6
@@ -620,14 +604,30 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">1</td>
       <td>Rory McIlroy -1
 -2 thru 4</td>
       <td>Justin Thomas -1
 E thru 1</td>
-      <td>Collin Morikawa(W) E
--1 thru 3</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
+      <td>Will Zalatoris +2
+E thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 6</td>
+      <td class="greyout">Tiger Woods(W) +11
++4 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">2</td>
+      <td>Rory McIlroy -1
+-2 thru 4</td>
+      <td>Justin Thomas -1
+E thru 1</td>
+      <td>Collin Morikawa(W) +1
+E thru 4</td>
       <td>Viktor Hovland +3
 E thru 6</td>
       <td class="greyout leftborder">Tiger Woods +11
@@ -637,13 +637,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Rory McIlroy -1
 -2 thru 4</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
       <td>Will Zalatoris +2
 E thru 6</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -685,11 +685,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Corey Conners(W) -2
 -1 thru 2</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
       <td>Robert MacIntyre +2
 -4 thru 14</td>
       <td>Jon Rahm +4
@@ -764,22 +764,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">9</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td>Viktor Hovland(W) +3
-E thru 6</td>
-      <td>Jon Rahm +4
--3 thru 16</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">9</td>
       <td>Rory McIlroy -1
@@ -809,6 +793,22 @@ E thru 12</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">10</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
+      <td>Will Zalatoris +2
+E thru 6</td>
+      <td>Viktor Hovland(W) +3
+E thru 6</td>
+      <td>Jon Rahm +4
+-3 thru 16</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -844,38 +844,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa(W) E
--1 thru 3</td>
-      <td>Hideki Matsuyama +3
-+1 thru 6</td>
-      <td>Jon Rahm +4
--3 thru 16</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
-      <td>Viktor Hovland(W) +3
-E thru 6</td>
-      <td>Jon Rahm +4
--3 thru 16</td>
-      <td>Patrick Reed +7
-+3 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">CRED</td>
       <td class="bigbold">15</td>
       <td>Scottie Scheffler -9
@@ -889,6 +857,38 @@ E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa(W) +1
+E thru 4</td>
+      <td>Hideki Matsuyama +3
++1 thru 6</td>
+      <td>Jon Rahm +4
+-3 thru 16</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
+      <td>Viktor Hovland(W) +3
+E thru 6</td>
+      <td>Jon Rahm +4
+-3 thru 16</td>
+      <td>Patrick Reed +7
++3 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -909,9 +909,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
+      <td class="bigbold">18</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
       <td>Jon Rahm(W) +4
 -3 thru 16</td>
       <td>Tony Finau +6
