--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:40:10 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:40:53 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -181,7 +181,7 @@ E thru 1</td>
       <td>Rory McIlroy -1
 -2 thru 4</td>
       <td>Tommy Fleetwood(W) +1
-E thru 2</td>
+E thru 3</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 6</td>
       <td class="greyout">Joaquin Niemann +4
@@ -220,22 +220,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-2</td>
-      <td>Sungjae Im -4
-Not started</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
-      <td>Viktor Hovland(W) +3
-E thru 6</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -2
@@ -252,14 +236,30 @@ E thru 1</td>
 +8 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-1</td>
+      <td>Sungjae Im -4
+Not started</td>
+      <td>Justin Thomas -1
+E thru 1</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
+      <td>Viktor Hovland(W) +3
+E thru 6</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Rory McIlroy -1
 -2 thru 4</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -277,7 +277,7 @@ E thru 1</td>
       <td>Dustin Johnson +1
 E thru 4</td>
       <td>Russell Henley +4
--3 thru 15</td>
+-3 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
@@ -285,11 +285,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Corey Conners(W) -2
 -1 thru 2</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
       <td>Robert MacIntyre +2
 -4 thru 14</td>
       <td>Jon Rahm +4
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
       <td>Will Zalatoris +2
 E thru 6</td>
       <td>Tony Finau +6
@@ -317,9 +317,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
       <td>Viktor Hovland(W) +3
 E thru 6</td>
       <td>Jon Rahm +4
@@ -329,22 +329,6 @@ E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
-      <td>Jon Rahm(W) +4
--3 thru 16</td>
-      <td>Tony Finau +6
-+2 thru 10</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -359,6 +343,22 @@ E thru 6</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">18</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
+      <td>Jon Rahm(W) +4
+-3 thru 16</td>
+      <td>Tony Finau +6
++2 thru 10</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
