--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:40:53 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:41:36 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,6 +220,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-13</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Hideki Matsuyama +2
+E thru 7</td>
+      <td>Will Zalatoris +2
+E thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler -9
@@ -233,22 +249,6 @@ E thru 6</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 6</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-12</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td>Hideki Matsuyama +3
-+1 thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -293,7 +293,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Dustin Johnson(W) +1
-E thru 4</td>
+E thru 5</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Louis Oosthuizen
@@ -316,6 +316,22 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Hideki Matsuyama +2
+E thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 6</td>
+      <td class="greyout">Jon Rahm +4
+-3 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler(W) -9
@@ -329,6 +345,22 @@ E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Justin Thomas -1
+E thru 1</td>
+      <td>Hideki Matsuyama +2
+E thru 7</td>
+      <td class="greyout leftborder">Marc Leishman +5
++2 thru 7</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -348,22 +380,6 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 6</td>
-      <td class="greyout leftborder">Hideki Matsuyama +3
-+1 thru 6</td>
-      <td class="greyout">Jon Rahm +4
--3 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -6
@@ -377,22 +393,6 @@ E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Hideki Matsuyama +3
-+1 thru 6</td>
-      <td class="greyout leftborder">Marc Leishman +5
-+2 thru 7</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -412,6 +412,22 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Rory McIlroy(W) -1
+-2 thru 4</td>
+      <td>Justin Thomas -1
+E thru 1</td>
+      <td>Hideki Matsuyama +2
+E thru 7</td>
+      <td class="greyout leftborder">Tiger Woods +11
++4 thru 16</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler -9
@@ -428,19 +444,19 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -6
 Not started</td>
-      <td>Rory McIlroy(W) -1
--2 thru 4</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Hideki Matsuyama +3
-+1 thru 6</td>
-      <td class="greyout leftborder">Tiger Woods +11
-+4 thru 16</td>
-      <td class="greyout">Xander Schauffele
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Talor Gooch +1
+-2 thru 7</td>
+      <td>Hideki Matsuyama +2
+E thru 7</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 thru 16</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -457,22 +473,6 @@ E thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay(W) +7
 -1 (F)</td>
       <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Talor Gooch +1
--2 thru 7</td>
-      <td>Hideki Matsuyama +3
-+1 thru 6</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 thru 16</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -705,7 +705,7 @@ Missed Cut</td>
       <td>Rory McIlroy(W) -1
 -2 thru 4</td>
       <td>Dustin Johnson +1
-E thru 4</td>
+E thru 5</td>
       <td>Viktor Hovland +3
 E thru 6</td>
       <td>Jon Rahm +4
@@ -785,7 +785,7 @@ Missed Cut</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Dustin Johnson(W) +1
-E thru 4</td>
+E thru 5</td>
       <td>Matthew Fitzpatrick +4
 E thru 12</td>
       <td>Tony Finau +6
@@ -812,6 +812,22 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">12</td>
+      <td>Justin Thomas -1
+E thru 1</td>
+      <td>Hideki Matsuyama +2
+E thru 7</td>
+      <td>Jon Rahm(W) +4
+-3 thru 16</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">13</td>
       <td>Justin Thomas(W) -1
@@ -828,18 +844,18 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Hideki Matsuyama +3
-+1 thru 6</td>
-      <td>Jon Rahm(W) +4
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">14</td>
+      <td>Collin Morikawa(W) +1
+E thru 4</td>
+      <td>Hideki Matsuyama +2
+E thru 7</td>
+      <td>Jon Rahm +4
 -3 thru 16</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -849,7 +865,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Dustin Johnson +1
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td>Adam Scott +14
@@ -857,22 +873,6 @@ E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">15</td>
-      <td>Collin Morikawa(W) +1
-E thru 4</td>
-      <td>Hideki Matsuyama +3
-+1 thru 6</td>
-      <td>Jon Rahm +4
--3 thru 16</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -895,7 +895,7 @@ Missed Cut</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">17</td>
       <td>Dustin Johnson +1
-E thru 4</td>
+E thru 5</td>
       <td>Viktor Hovland +3
 E thru 6</td>
       <td>Jon Rahm +4
