--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:42:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:43:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
       <td>Will Zalatoris +2
@@ -161,7 +161,7 @@ E thru 6</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +2
 E thru 6</td>
       <td>Jon Rahm +4
@@ -193,7 +193,7 @@ E thru 12</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
       <td>Will Zalatoris +2
@@ -225,7 +225,7 @@ Missed Cut</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
       <td>Jon Rahm +4
