--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:42:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:43:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -195,7 +195,7 @@ Not started</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +3
 E thru 7</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -211,7 +211,7 @@ Not started</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -273,7 +273,7 @@ Not started</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
       <td>Will Zalatoris +2
@@ -291,7 +291,7 @@ Not started</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Dustin Johnson(W) +1
 E thru 5</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -323,7 +323,7 @@ Not started</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Hideki Matsuyama +2
 E thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -369,7 +369,7 @@ Missed Cut</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
       <td>Will Zalatoris +2
@@ -401,7 +401,7 @@ Missed Cut</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
       <td>Viktor Hovland +3
@@ -671,7 +671,7 @@ Missed Cut</td>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">3</td>
       <td>Shane Lowry(W) -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Viktor Hovland +3
@@ -783,7 +783,7 @@ Missed Cut</td>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">9</td>
       <td>Shane Lowry -2
-Not started</td>
+E thru 1</td>
       <td>Dustin Johnson(W) +1
 E thru 5</td>
       <td>Matthew Fitzpatrick +4
